Complited large hero block and intro content block.

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -3,12 +3,21 @@
 
   @mixin clearfix;
 
+  &--t-padding {
+    padding-top: 80px;
+  }
+
   &--gutters {
     margin-right: -65px;
   }
 
+
   &--gutters-large {
     margin-right: -100px;
+  }
+
+  &--gutters-small {
+    margin-right: -45px;
   }
 
   &--gutters > div {
@@ -18,6 +27,10 @@
 
   &--gutters-large > div {
     padding-right: 100px;
+  }
+
+  &--gutters-small > div {
+    padding-right: 45px;
   }
 
   &__b-margin-until-medium {
@@ -54,6 +67,16 @@
         width: 63%;
       }
   }
+/*Beginn Equal Height Rules*/
+  &--equal-height-at-medium {
+    @mixin atMedium {
+      display: flex;
 
+    }
+    & > div {
+      float: none;
+      display: flex;
+    }
+  }
 
 }
