--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -5,10 +5,30 @@
       padding: 4.5rem 0;
   }
 
+  &--no-b-padding0-until-medium {
+    padding-bottom: 0;
+
+    @mixin atMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
+
+
 
   &--blue {
     background-color: $mainBlue;
     color: #FFF;
   }
+
+  &--testimonials {
+    backgroud-color: #e0e6ef;
+
+    @mixin atMedium {
+      background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
+  }
+
+
 
 }
